@@ -1,11 +1,8 @@
-<!-- Automagically generated by the ToDo program on 2005-04-01 -->
+<!-- Automagically generated by the ToDo program on 04/03/05, 01:50 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="high" time="1112411351">
-        Fix bug where -qm ambiguous still shows color
-    </note>
     <note priority="medium" time="1112411396">
         Fix bug where status is printed if -pq is specified.
     </note>
